--- a/packages/render/package.json
+++ b/packages/render/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@lattice-engine/core",
+  "name": "@lattice-engine/render",
   "version": "0.1.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/lattice-engine/lattice",
-    "directory": "packages/core"
+    "directory": "packages/render"
   },
   "license": "GPL-3.0-or-later",
   "type": "module",
@@ -15,9 +15,12 @@
     "dev": "pnpm build --watch"
   },
   "dependencies": {
-    "@lastolivegames/becsy": "^0.14.3"
+    "@lastolivegames/becsy": "^0.14.3",
+    "@lattice-engine/core": "workspace:^",
+    "three": "^0.149.0"
   },
   "devDependencies": {
+    "@types/three": "^0.149.0",
     "tsup": "^6.7.0",
     "typescript": "~5.0.4"
   },
