fix gltf loading errors

--- a/examples/tsconfig.json
+++ b/examples/tsconfig.json
@@ -3,5 +3,5 @@
     "outDir": "./build"
   },
   "extends": "../tsconfig.json",
-  "include": ["basic"]
+  "exclude": ["node_modules", "build", "dist", ".turbo"]
 }
