--- a/package.json
+++ b/package.json
@@ -29,5 +29,10 @@
   "engines": {
     "node": ">=18.0.0",
     "pnpm": ">=7.0.0"
+  },
+  "pnpm": {
+    "patchedDependencies": {
+      "thyseus@0.11.0": "patches/thyseus@0.11.0.patch"
+    }
   }
 }
