add more gltfs to example + add cleanup

--- a/turbo.json
+++ b/turbo.json
@@ -5,6 +5,8 @@
       "dependsOn": ["^build"],
       "outputs": ["build/**", "dist/**"]
     },
-    "dev": { "cache": false, "persistent": true }
+    "dev": { "cache": false, "persistent": true },
+    "test": {},
+    "test:watch": { "cache": false, "persistent": true }
   }
 }
