--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "turbo dev",
     "format": "prettier --write .",
     "lint": "eslint --fix . --ext .ts,.json --ignore-path .gitignore --ignore-pattern package.json",
-    "test": "turbo test"
+    "test": "turbo test",
+    "test:watch": "turbo test:watch"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.59.0",
