--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -19,7 +19,7 @@
   },
   "dependencies": {
     "@lastolivegames/becsy": "^0.14.3",
-    "thyseus": "^0.11.0"
+    "thyseus": "0.12.0-beta.3"
   },
   "devDependencies": {
     "tsup": "^6.7.0",
