--- a/packages/gltf/package.json
+++ b/packages/gltf/package.json
@@ -21,7 +21,7 @@
     "@gltf-transform/core": "^3.2.1",
     "@gltf-transform/extensions": "^3.2.1",
     "@lattice-engine/core": "workspace:^",
-    "thyseus": "^0.11.0"
+    "thyseus": "0.12.0-beta.3"
   },
   "devDependencies": {
     "tsup": "^6.7.0",
