--- a/packages/render/package.json
+++ b/packages/render/package.json
@@ -20,7 +20,7 @@
   "dependencies": {
     "@lattice-engine/core": "workspace:^",
     "three": "^0.149.0",
-    "thyseus": "^0.11.0"
+    "thyseus": "0.12.0-beta.3"
   },
   "devDependencies": {
     "@types/three": "^0.149.0",
