--- a/examples/package.json
+++ b/examples/package.json
@@ -13,6 +13,7 @@
     "@lattice-engine/core": "workspace:^",
     "@lattice-engine/gltf": "workspace:^",
     "@lattice-engine/orbit": "workspace:^",
+    "@lattice-engine/physics": "workspace:^",
     "@lattice-engine/render": "workspace:^",
     "three": "^0.149.0",
     "thyseus": "0.12.0-beta.3"
@@ -20,6 +21,7 @@
   "devDependencies": {
     "@types/three": "^0.149.0",
     "typescript": "~5.0.4",
-    "vite": "^4.3.4"
+    "vite": "^4.3.4",
+    "vite-plugin-wasm": "^3.2.2"
   }
 }
