--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@typescript-eslint/parser": "^5.59.0",
     "eslint": "^8.38.0",
     "eslint-config-turbo": "^1.9.3",
+    "eslint-import-resolver-typescript": "^3.5.5",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsonc": "^2.7.0",
     "eslint-plugin-log-filenames": "^1.0.6",
     "eslint-plugin-package-json": "^0.1.4",
