--- a/examples/package.json
+++ b/examples/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "build": "tsc && vite build",
     "dev": "vite",
-    "serve": "vite preview"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@lattice-engine/core": "workspace:^",
