--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -23,7 +23,8 @@
   },
   "devDependencies": {
     "typescript": "~5.0.4",
-    "vite": "^4.3.4"
+    "vite": "^4.3.4",
+    "vite-plugin-dts": "^2.3.0"
   },
   "publishConfig": {
     "access": "public"
