--- a/examples/package.json
+++ b/examples/package.json
@@ -15,6 +15,7 @@
     "@lattice-engine/orbit": "workspace:^",
     "@lattice-engine/physics": "workspace:^",
     "@lattice-engine/render": "workspace:^",
+    "@lattice-engine/scene": "workspace:^",
     "three": "^0.149.0",
     "thyseus": "0.12.0-beta.3"
   },
