--- a/packages/gltf/package.json
+++ b/packages/gltf/package.json
@@ -21,6 +21,7 @@
     "@gltf-transform/core": "^3.2.1",
     "@gltf-transform/extensions": "^3.2.1",
     "@lattice-engine/core": "workspace:^",
+    "@lattice-engine/scene": "workspace:^",
     "thyseus": "0.12.0-beta.3"
   },
   "devDependencies": {
