--- a/packages/render/package.json
+++ b/packages/render/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@lattice-engine/core": "workspace:^",
+    "@lattice-engine/scene": "workspace:^",
     "three": "^0.149.0",
     "thyseus": "0.12.0-beta.3"
   },
