--- a/examples/package.json
+++ b/examples/package.json
@@ -2,7 +2,6 @@
   "name": "examples",
   "version": "0.0.0",
   "private": true,
-  "license": "GPL-3.0-or-later",
   "type": "module",
   "scripts": {
     "build": "tsc && vite build",
@@ -16,12 +15,22 @@
     "@lattice-engine/physics": "workspace:^",
     "@lattice-engine/render": "workspace:^",
     "@lattice-engine/scene": "workspace:^",
+    "leva": "^0.9.34",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "three": "^0.149.0",
-    "thyseus": "0.12.0-beta.3"
+    "thyseus": "0.12.0-beta.3",
+    "wouter": "^2.11.0"
   },
   "devDependencies": {
+    "@types/react": "^18.2.6",
+    "@types/react-dom": "^18.2.4",
     "@types/three": "^0.149.0",
-    "typescript": "~5.0.4",
-    "vite": "^4.3.4"
+    "@vitejs/plugin-react": "^4.0.0",
+    "eslint": "^8.40.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.3.5",
+    "typescript": "^5.0.4",
+    "vite": "^4.3.8"
   }
 }
