--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -14,8 +14,8 @@
     "dist"
   ],
   "scripts": {
-    "build": "vite build",
-    "dev": "pnpm build --watch"
+    "build": "vite build --emptyOutDir",
+    "dev": "vite build --watch"
   },
   "dependencies": {
     "thyseus": "0.12.0-beta.3"
