--- a/packages/physics/package.json
+++ b/packages/physics/package.json
@@ -14,8 +14,8 @@
     "dist"
   ],
   "scripts": {
-    "build": "vite build",
-    "dev": "pnpm build --watch"
+    "build": "vite build --emptyOutDir",
+    "dev": "vite build --watch"
   },
   "dependencies": {
     "@dimforge/rapier3d": "^0.11.2",
