move input event writing to input package

--- a/examples/package.json
+++ b/examples/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@lattice-engine/core": "workspace:^",
     "@lattice-engine/gltf": "workspace:^",
+    "@lattice-engine/input": "workspace:^",
     "@lattice-engine/orbit": "workspace:^",
     "@lattice-engine/physics": "workspace:^",
     "@lattice-engine/render": "workspace:^",
