--- a/packages/input/package.json
+++ b/packages/input/package.json
@@ -18,6 +18,7 @@
     "dev": "vite build --watch"
   },
   "dependencies": {
+    "@lattice-engine/core": "workspace:^",
     "thyseus": "0.12.0-beta.3"
   },
   "devDependencies": {
