--- a/packages/orbit/package.json
+++ b/packages/orbit/package.json
@@ -22,9 +22,10 @@
     "@lattice-engine/render": "workspace:^",
     "@lattice-engine/scene": "workspace:^",
     "three": "^0.149.0",
-    "thyseus": "0.12.0-beta.3"
+    "thyseus": "0.12.0-beta.5"
   },
   "devDependencies": {
+    "@thyseus/transformer-rollup": "0.12.0-beta.5",
     "@types/three": "^0.149.0",
     "typescript": "~5.0.4",
     "vite": "^4.3.8",
