--- a/packages/physics/package.json
+++ b/packages/physics/package.json
@@ -20,9 +20,10 @@
   "dependencies": {
     "@dimforge/rapier3d": "^0.11.2",
     "@lattice-engine/scene": "workspace:^",
-    "thyseus": "0.12.0-beta.3"
+    "thyseus": "0.12.0-beta.5"
   },
   "devDependencies": {
+    "@thyseus/transformer-rollup": "0.12.0-beta.5",
     "typescript": "~5.0.4",
     "vite": "^4.3.8",
     "vite-plugin-dts": "^2.3.0",
