--- a/packages/player/package.json
+++ b/packages/player/package.json
@@ -22,10 +22,12 @@
     "@lattice-engine/input": "workspace:^",
     "@lattice-engine/physics": "workspace:^",
     "@lattice-engine/scene": "workspace:^",
+    "three": "^0.149.0",
     "thyseus": "0.12.0-beta.5"
   },
   "devDependencies": {
     "@thyseus/transformer-rollup": "0.12.0-beta.5",
+    "@types/three": "^0.149.0",
     "typescript": "~5.0.4",
     "vite": "^4.3.8",
     "vite-plugin-dts": "^2.3.0"
