--- a/examples/package.json
+++ b/examples/package.json
@@ -15,7 +15,8 @@
     "react-dom": "^18.2.0",
     "three": "^0.149.0",
     "thyseus": "0.12.0-beta.6",
-    "wouter": "^2.11.0"
+    "wouter": "^2.11.0",
+    "zustand": "^4.3.8"
   },
   "devDependencies": {
     "@thyseus/transformer-rollup": "0.12.0-beta.5",
