--- a/packages/physics/package.json
+++ b/packages/physics/package.json
@@ -21,6 +21,7 @@
     "@dimforge/rapier3d": "^0.11.2",
     "@lattice-engine/core": "workspace:^",
     "@lattice-engine/scene": "workspace:^",
+    "gl-matrix": "^4.0.0-beta.1",
     "thyseus": "0.12.0-beta.6"
   },
   "devDependencies": {
