--- a/packages/lattice-engine/package.json
+++ b/packages/lattice-engine/package.json
@@ -47,6 +47,9 @@
     "./scene": {
       "import": "./dist/scene.js"
     },
+    "./text": {
+      "import": "./dist/text.js"
+    },
     "./utils": {
       "import": "./dist/utils.js"
     },
@@ -82,6 +85,7 @@
     "@lattice-engine/player": "workspace:^",
     "@lattice-engine/render": "workspace:^",
     "@lattice-engine/scene": "workspace:^",
+    "@lattice-engine/text": "workspace:^",
     "@lattice-engine/utils": "workspace:^",
     "@lattice-engine/vrm": "workspace:^",
     "thyseus": "0.12.0-beta.6"
