--- a/packages/text/package.json
+++ b/packages/text/package.json
@@ -21,6 +21,7 @@
     "@lattice-engine/core": "workspace:^",
     "@lattice-engine/render": "workspace:^",
     "@lattice-engine/scene": "workspace:^",
+    "postprocessing": "^6.31.0",
     "three": "^0.151.3",
     "thyseus": "0.12.0-beta.6",
     "troika-three-text": "^0.47.2"
