--- a/packages/lattice-engine/package.json
+++ b/packages/lattice-engine/package.json
@@ -32,6 +32,9 @@
     "./input": {
       "import": "./dist/input.js"
     },
+    "./n8ao": {
+      "import": "./dist/n8ao.js"
+    },
     "./orbit": {
       "import": "./dist/orbit.js"
     },
@@ -64,11 +67,13 @@
     "core.d.ts",
     "gltf.d.ts",
     "input.d.ts",
+    "n8ao.d.ts",
     "orbit.d.ts",
     "physics.d.ts",
     "player.d.ts",
     "render.d.ts",
     "scene.d.ts",
+    "text.d.ts",
     "utils.d.ts",
     "vrm.d.ts"
   ],
@@ -80,6 +85,7 @@
     "@lattice-engine/core": "workspace:^",
     "@lattice-engine/gltf": "workspace:^",
     "@lattice-engine/input": "workspace:^",
+    "@lattice-engine/n8ao": "workspace:^",
     "@lattice-engine/orbit": "workspace:^",
     "@lattice-engine/physics": "workspace:^",
     "@lattice-engine/player": "workspace:^",
