--- a/examples/package.json
+++ b/examples/package.json
@@ -14,12 +14,12 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "three": "^0.151.3",
-    "thyseus": "0.12.0-beta.6",
+    "thyseus": "^0.12.1",
     "wouter": "^2.11.0",
     "zustand": "^4.3.8"
   },
   "devDependencies": {
-    "@thyseus/transformer-rollup": "0.12.0-beta.5",
+    "@thyseus/transformer-rollup": "^0.12.0",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
     "@types/three": "^0.151.0",
