--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -18,10 +18,10 @@
     "dev": "vite build --watch"
   },
   "dependencies": {
-    "thyseus": "0.12.0-beta.6"
+    "thyseus": "^0.12.1"
   },
   "devDependencies": {
-    "@thyseus/transformer-rollup": "0.12.0-beta.5",
+    "@thyseus/transformer-rollup": "^0.12.0",
     "typescript": "~5.0.4",
     "vite": "^4.3.8",
     "vite-plugin-dts": "^2.3.0"
