--- a/packages/gltf/package.json
+++ b/packages/gltf/package.json
@@ -22,10 +22,10 @@
     "@gltf-transform/extensions": "^3.3.1",
     "@lattice-engine/core": "workspace:^",
     "@lattice-engine/scene": "workspace:^",
-    "thyseus": "0.12.0-beta.6"
+    "thyseus": "^0.12.1"
   },
   "devDependencies": {
-    "@thyseus/transformer-rollup": "0.12.0-beta.5",
+    "@thyseus/transformer-rollup": "^0.12.0",
     "typescript": "~5.0.4",
     "vite": "^4.3.8",
     "vite-plugin-dts": "^2.3.0"
