--- a/packages/lattice-engine/package.json
+++ b/packages/lattice-engine/package.json
@@ -94,7 +94,7 @@
     "@lattice-engine/text": "workspace:^",
     "@lattice-engine/utils": "workspace:^",
     "@lattice-engine/vrm": "workspace:^",
-    "thyseus": "0.12.0-beta.6"
+    "thyseus": "^0.12.1"
   },
   "devDependencies": {
     "typescript": "~5.0.4",
