--- a/packages/n8ao/package.json
+++ b/packages/n8ao/package.json
@@ -22,10 +22,10 @@
     "@lattice-engine/scene": "workspace:^",
     "n8ao": "^1.5.1",
     "postprocessing": "^6.31.0",
-    "thyseus": "0.12.0-beta.6"
+    "thyseus": "^0.12.1"
   },
   "devDependencies": {
-    "@thyseus/transformer-rollup": "0.12.0-beta.5",
+    "@thyseus/transformer-rollup": "^0.12.0",
     "typescript": "~5.0.4",
     "vite": "^4.3.8",
     "vite-plugin-dts": "^2.3.0"
