--- a/packages/player/package.json
+++ b/packages/player/package.json
@@ -25,10 +25,10 @@
     "@lattice-engine/scene": "workspace:^",
     "@lattice-engine/vrm": "workspace:^",
     "three": "^0.151.3",
-    "thyseus": "0.12.0-beta.6"
+    "thyseus": "^0.12.1"
   },
   "devDependencies": {
-    "@thyseus/transformer-rollup": "0.12.0-beta.5",
+    "@thyseus/transformer-rollup": "^0.12.0",
     "@types/three": "^0.151.0",
     "typescript": "~5.0.4",
     "vite": "^4.3.8",
