--- a/packages/text/package.json
+++ b/packages/text/package.json
@@ -23,11 +23,11 @@
     "@lattice-engine/scene": "workspace:^",
     "postprocessing": "^6.31.0",
     "three": "^0.151.3",
-    "thyseus": "0.12.0-beta.6",
+    "thyseus": "^0.12.1",
     "troika-three-text": "^0.47.2"
   },
   "devDependencies": {
-    "@thyseus/transformer-rollup": "0.12.0-beta.5",
+    "@thyseus/transformer-rollup": "^0.12.0",
     "@types/three": "^0.151.0",
     "typescript": "~5.0.4",
     "vite": "^4.3.8",
