--- a/packages/gltf/package.json
+++ b/packages/gltf/package.json
@@ -19,16 +19,18 @@
   },
   "dependencies": {
     "@gltf-transform/core": "^3.3.1",
-    "@gltf-transform/extensions": "^3.3.1",
-    "@lattice-engine/core": "workspace:^",
-    "@lattice-engine/scene": "workspace:^",
-    "thyseus": "^0.12.1"
+    "@gltf-transform/extensions": "^3.3.1"
   },
   "devDependencies": {
     "@thyseus/transformer-rollup": "^0.12.0",
     "typescript": "~5.0.4",
     "vite": "^4.3.8",
     "vite-plugin-dts": "^2.3.0"
+  },
+  "peerDependencies": {
+    "@lattice-engine/core": "workspace:^",
+    "@lattice-engine/scene": "workspace:^",
+    "thyseus": "^0.12.1"
   },
   "publishConfig": {
     "access": "public"
