--- a/packages/input/package.json
+++ b/packages/input/package.json
@@ -17,15 +17,15 @@
     "build": "vite build --emptyOutDir",
     "dev": "vite build --watch"
   },
-  "dependencies": {
-    "@lattice-engine/core": "workspace:^",
-    "thyseus": "^0.12.1"
-  },
   "devDependencies": {
     "@thyseus/transformer-rollup": "^0.12.0",
     "typescript": "~5.0.4",
     "vite": "^4.3.8",
     "vite-plugin-dts": "^2.3.0"
+  },
+  "peerDependencies": {
+    "@lattice-engine/core": "workspace:^",
+    "thyseus": "^0.12.1"
   },
   "publishConfig": {
     "access": "public"
