--- a/packages/n8ao/package.json
+++ b/packages/n8ao/package.json
@@ -18,17 +18,19 @@
     "dev": "vite build --watch"
   },
   "dependencies": {
-    "@lattice-engine/render": "workspace:^",
-    "@lattice-engine/scene": "workspace:^",
     "n8ao": "^1.5.1",
-    "postprocessing": "^6.31.0",
-    "thyseus": "^0.12.1"
+    "postprocessing": "^6.31.0"
   },
   "devDependencies": {
     "@thyseus/transformer-rollup": "^0.12.0",
     "typescript": "~5.0.4",
     "vite": "^4.3.8",
     "vite-plugin-dts": "^2.3.0"
+  },
+  "peerDependencies": {
+    "@lattice-engine/render": "workspace:^",
+    "@lattice-engine/scene": "workspace:^",
+    "thyseus": "^0.12.1"
   },
   "publishConfig": {
     "access": "public"
