--- a/packages/physics/package.json
+++ b/packages/physics/package.json
@@ -19,10 +19,7 @@
   },
   "dependencies": {
     "@dimforge/rapier3d": "^0.11.2",
-    "@lattice-engine/core": "workspace:^",
-    "@lattice-engine/scene": "workspace:^",
-    "gl-matrix": "^4.0.0-beta.1",
-    "thyseus": "^0.12.1"
+    "gl-matrix": "^4.0.0-beta.1"
   },
   "devDependencies": {
     "@thyseus/transformer-rollup": "^0.12.0",
@@ -30,6 +27,11 @@
     "vite": "^4.3.8",
     "vite-plugin-dts": "^2.3.0",
     "vite-plugin-wasm": "^3.2.2"
+  },
+  "peerDependencies": {
+    "@lattice-engine/core": "workspace:^",
+    "@lattice-engine/scene": "workspace:^",
+    "thyseus": "^0.12.1"
   },
   "publishConfig": {
     "access": "public"
