--- a/packages/player/package.json
+++ b/packages/player/package.json
@@ -17,7 +17,14 @@
     "build": "vite build --emptyOutDir",
     "dev": "vite build --watch"
   },
-  "dependencies": {
+  "devDependencies": {
+    "@thyseus/transformer-rollup": "^0.12.0",
+    "@types/three": "^0.151.0",
+    "typescript": "~5.0.4",
+    "vite": "^4.3.8",
+    "vite-plugin-dts": "^2.3.0"
+  },
+  "peerDependencies": {
     "@lattice-engine/core": "workspace:^",
     "@lattice-engine/input": "workspace:^",
     "@lattice-engine/physics": "workspace:^",
@@ -26,13 +33,6 @@
     "@lattice-engine/vrm": "workspace:^",
     "three": "^0.151.3",
     "thyseus": "^0.12.1"
-  },
-  "devDependencies": {
-    "@thyseus/transformer-rollup": "^0.12.0",
-    "@types/three": "^0.151.0",
-    "typescript": "~5.0.4",
-    "vite": "^4.3.8",
-    "vite-plugin-dts": "^2.3.0"
   },
   "publishConfig": {
     "access": "public"
