--- a/packages/render/package.json
+++ b/packages/render/package.json
@@ -18,11 +18,7 @@
     "dev": "vite build --watch"
   },
   "dependencies": {
-    "@lattice-engine/core": "workspace:^",
-    "@lattice-engine/scene": "workspace:^",
-    "postprocessing": "^6.31.0",
-    "three": "^0.151.3",
-    "thyseus": "^0.12.1"
+    "postprocessing": "^6.31.0"
   },
   "devDependencies": {
     "@thyseus/transformer-rollup": "^0.12.0",
@@ -30,6 +26,12 @@
     "typescript": "~5.0.4",
     "vite": "^4.3.8",
     "vite-plugin-dts": "^2.3.0"
+  },
+  "peerDependencies": {
+    "@lattice-engine/core": "workspace:^",
+    "@lattice-engine/scene": "workspace:^",
+    "three": "^0.151.3",
+    "thyseus": "^0.12.1"
   },
   "publishConfig": {
     "access": "public"
