--- a/packages/scene/package.json
+++ b/packages/scene/package.json
@@ -18,15 +18,17 @@
     "dev": "vite build --watch"
   },
   "dependencies": {
-    "@lattice-engine/core": "workspace:^",
-    "gl-matrix": "^4.0.0-beta.1",
-    "thyseus": "^0.12.1"
+    "gl-matrix": "^4.0.0-beta.1"
   },
   "devDependencies": {
     "@thyseus/transformer-rollup": "^0.12.0",
     "typescript": "~5.0.4",
     "vite": "^4.3.8",
     "vite-plugin-dts": "^2.3.0"
+  },
+  "peerDependencies": {
+    "@lattice-engine/core": "workspace:^",
+    "thyseus": "^0.12.1"
   },
   "publishConfig": {
     "access": "public"
