--- a/packages/text/package.json
+++ b/packages/text/package.json
@@ -18,20 +18,20 @@
     "dev": "vite build --watch"
   },
   "dependencies": {
-    "@lattice-engine/core": "workspace:^",
-    "@lattice-engine/render": "workspace:^",
-    "@lattice-engine/scene": "workspace:^",
     "postprocessing": "^6.31.0",
-    "three": "^0.151.3",
-    "thyseus": "^0.12.1",
     "troika-three-text": "^0.47.2"
   },
   "devDependencies": {
     "@thyseus/transformer-rollup": "^0.12.0",
-    "@types/three": "^0.151.0",
     "typescript": "~5.0.4",
     "vite": "^4.3.8",
     "vite-plugin-dts": "^2.3.0"
+  },
+  "peerDependencies": {
+    "@lattice-engine/core": "workspace:^",
+    "@lattice-engine/render": "workspace:^",
+    "@lattice-engine/scene": "workspace:^",
+    "thyseus": "^0.12.1"
   },
   "publishConfig": {
     "access": "public"
