--- a/packages/vrm/package.json
+++ b/packages/vrm/package.json
@@ -18,12 +18,7 @@
     "dev": "vite build --watch"
   },
   "dependencies": {
-    "@lattice-engine/core": "workspace:^",
-    "@lattice-engine/render": "workspace:^",
-    "@lattice-engine/scene": "workspace:^",
-    "@pixiv/three-vrm": "^1.0.10",
-    "three": "^0.151.3",
-    "thyseus": "^0.12.1"
+    "@pixiv/three-vrm": "^1.0.10"
   },
   "devDependencies": {
     "@thyseus/transformer-rollup": "^0.12.0",
@@ -31,6 +26,13 @@
     "typescript": "~5.0.4",
     "vite": "^4.3.8",
     "vite-plugin-dts": "^2.3.0"
+  },
+  "peerDependencies": {
+    "@lattice-engine/core": "workspace:^",
+    "@lattice-engine/render": "workspace:^",
+    "@lattice-engine/scene": "workspace:^",
+    "three": "^0.151.3",
+    "thyseus": "^0.12.1"
   },
   "publishConfig": {
     "access": "public"
