--- a/packages/lattice-engine/package.json
+++ b/packages/lattice-engine/package.json
@@ -100,6 +100,12 @@
     "vite": "^4.3.8",
     "vite-plugin-dts": "^2.3.0"
   },
+  "peerDependencies": {
+    "thyseus": "^0.12.1"
+  },
+  "optionalDependencies": {
+    "three": "^0.151.3"
+  },
   "publishConfig": {
     "access": "public"
   }
