--- a/examples/package.json
+++ b/examples/package.json
@@ -19,6 +19,7 @@
     "zustand": "^4.3.8"
   },
   "devDependencies": {
+    "@gltf-transform/core": "^3.3.1",
     "@thyseus/transformer-rollup": "^0.12.0",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
