remove wired package

--- a/packages/lattice-engine/package.json
+++ b/packages/lattice-engine/package.json
@@ -58,9 +58,6 @@
     },
     "./vrm": {
       "import": "./dist/vrm.js"
-    },
-    "./wired": {
-      "import": "./dist/wired.js"
     }
   },
   "types": "index.d.ts",
@@ -78,8 +75,7 @@
     "scene.d.ts",
     "text.d.ts",
     "utils.d.ts",
-    "vrm.d.ts",
-    "wired.d.ts"
+    "vrm.d.ts"
   ],
   "scripts": {
     "build": "vite build --emptyOutDir",
@@ -97,8 +93,7 @@
     "@lattice-engine/scene": "workspace:^",
     "@lattice-engine/text": "workspace:^",
     "@lattice-engine/utils": "workspace:^",
-    "@lattice-engine/vrm": "workspace:^",
-    "@lattice-engine/wired": "workspace:^"
+    "@lattice-engine/vrm": "workspace:^"
   },
   "devDependencies": {
     "typescript": "~5.0.4",
