set dependabot target branch to main

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,7 +3,7 @@ version: 2
 updates:
   - package-ecosystem: "npm"
     directory: "/"
-    target-branch: "dev"
+    target-branch: "main"
     open-pull-requests-limit: 10
     schedule:
       interval: "weekly"
