fix changesets GITHUB_TOKEN

--- a/.github/workflows/changesets.yml
+++ b/.github/workflows/changesets.yml
@@ -58,3 +58,5 @@ jobs:
         uses: changesets/action@v1
         with:
           publish: pnpm ci:publish
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
