--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
-node_modules
-build
-dist
-coverage
+.npmrc
 .turbo
-*.tsbuildinfo
-vite.config.*.timestamp*
 *.local.*
+*.tsbuildinfo
+build
+coverage
+dist
+node_modules
+vite.config.*.timestamp*
