--- a/.github/workflows/changesets.yml
+++ b/.github/workflows/changesets.yml
@@ -57,6 +57,6 @@ jobs:
         id: changesets
         uses: changesets/action@v1
         with:
-          publish: pnpm ci:publish
+          publish: pnpm release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
