--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "license": "GPL-3.0-or-later",
   "scripts": {
     "build": "turbo build",
-    "ci:publish": "pnpm publish -r && changeset tag && git push --follow-tags",
     "dev": "turbo dev --concurrency 16",
     "format": "prettier --write .",
     "lint": "eslint --fix . --ext .ts,.tsx,.mjs,.json --ignore-path .prettierignore --ignore-pattern package.json",
+    "release": "pnpm build && pnpm publish -r && changeset tag && git push --follow-tags",
     "test": "turbo test",
     "test:watch": "turbo test:watch"
   },
