update changesets github token

--- a/.github/workflows/changesets.yml
+++ b/.github/workflows/changesets.yml
@@ -59,4 +59,4 @@ jobs:
         with:
           publish: pnpm release
         env:
-          GITHUB_TOKEN: ${{ secrets.CHANGESETS_PAT }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
