--- a/packages/gltf/package.json
+++ b/packages/gltf/package.json
@@ -27,8 +27,7 @@
     "@thyseus/transformer-rollup": "^0.12.0",
     "typescript": "~5.1.3",
     "vite": "^4.3.8",
-    "vite-plugin-dts": "^2.3.0",
-    "vite-plugin-static-copy": "^0.16.0"
+    "vite-plugin-dts": "^2.3.0"
   },
   "peerDependencies": {
     "@lattice-engine/core": "workspace:^",
