--- a/packages/lattice-engine/package.json
+++ b/packages/lattice-engine/package.json
@@ -98,8 +98,7 @@
   "devDependencies": {
     "typescript": "~5.1.3",
     "vite": "^4.3.8",
-    "vite-plugin-dts": "^2.3.0",
-    "vite-plugin-static-copy": "^0.16.0"
+    "vite-plugin-dts": "^2.3.0"
   },
   "peerDependencies": {
     "thyseus": "^0.12.1"
