--- a/packages/portal/package.json
+++ b/packages/portal/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@lattice-engine/input",
-  "version": "0.1.1",
+  "name": "@lattice-engine/portal",
+  "version": "0.1.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/lattice-engine/lattice",
-    "directory": "packages/input"
+    "directory": "packages/portal"
   },
   "license": "GPL-3.0-or-later",
   "type": "module",
@@ -19,12 +19,16 @@
   },
   "devDependencies": {
     "@thyseus/transformer-rollup": "^0.13.0",
+    "@types/three": "^0.151.0",
     "typescript": "~5.1.3",
     "vite": "^4.3.9",
     "vite-plugin-dts": "^2.3.0"
   },
   "peerDependencies": {
     "@lattice-engine/core": "workspace:^",
+    "@lattice-engine/render": "workspace:^",
+    "@lattice-engine/scene": "workspace:^",
+    "three": "^0.151.3",
     "thyseus": "^0.13.0"
   },
   "publishConfig": {
