--- a/packages/text/package.json
+++ b/packages/text/package.json
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "@thyseus/transformer-rollup": "^0.13.0",
+    "@types/three": "^0.151.0",
     "typescript": "~5.1.3",
     "vite": "^4.3.9",
     "vite-plugin-dts": "^2.3.0"
@@ -31,7 +32,8 @@
     "@lattice-engine/core": "workspace:^",
     "@lattice-engine/render": "workspace:^",
     "@lattice-engine/scene": "workspace:^",
-    "thyseus": "^0.13"
+    "three": "^0.151.3",
+    "thyseus": "^0.13.0"
   },
   "publishConfig": {
     "access": "public"
