--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test:watch": "turbo test:watch"
   },
   "devDependencies": {
-    "@changesets/cli": "^2.26.1",
+    "@changesets/cli": "~2.25.2",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
     "eslint": "^8.44.0",
