add MOZ_text gltf extension support

--- a/packages/gltf/package.json
+++ b/packages/gltf/package.json
@@ -33,6 +33,7 @@
     "@lattice-engine/core": "workspace:^",
     "@lattice-engine/physics": "workspace:^",
     "@lattice-engine/scene": "workspace:^",
+    "@lattice-engine/text": "workspace:^",
     "thyseus": "^0.13.1"
   },
   "publishConfig": {
