--- a/packages/lattice-engine/package.json
+++ b/packages/lattice-engine/package.json
@@ -56,6 +56,9 @@
     "./text": {
       "import": "./dist/text.js"
     },
+    "./transform": {
+      "import": "./dist/transform.js"
+    },
     "./utils": {
       "import": "./dist/utils.js"
     },
@@ -78,6 +81,7 @@
     "render.d.ts",
     "scene.d.ts",
     "text.d.ts",
+    "transform.d.ts",
     "utils.d.ts",
     "vrm.d.ts"
   ],
@@ -97,6 +101,7 @@
     "@lattice-engine/render": "workspace:^",
     "@lattice-engine/scene": "workspace:^",
     "@lattice-engine/text": "workspace:^",
+    "@lattice-engine/transform": "workspace:^",
     "@lattice-engine/utils": "workspace:^",
     "@lattice-engine/vrm": "workspace:^"
   },
