--- a/packages/transform/package.json
+++ b/packages/transform/package.json
@@ -28,6 +28,7 @@
     "@lattice-engine/core": "workspace:^",
     "@lattice-engine/input": "workspace:^",
     "@lattice-engine/orbit": "workspace:^",
+    "@lattice-engine/postprocessing": "workspace:^",
     "@lattice-engine/render": "workspace:^",
     "@lattice-engine/scene": "workspace:^",
     "three": "~0.153.0",
