make postprocessing a peerDependency

--- a/packages/postprocessing/package.json
+++ b/packages/postprocessing/package.json
@@ -18,8 +18,7 @@
     "dev": "vite build --watch"
   },
   "dependencies": {
-    "n8ao": "^1.6.7",
-    "postprocessing": "^6.32.2"
+    "n8ao": "^1.6.7"
   },
   "devDependencies": {
     "@thyseus/transformer-rollup": "^0.13.0",
@@ -32,6 +31,7 @@
     "@lattice-engine/core": "workspace:^",
     "@lattice-engine/render": "workspace:^",
     "@lattice-engine/scene": "workspace:^",
+    "postprocessing": "^6.32.2",
     "three": "~0.153.0",
     "thyseus": "^0.13.1"
   },
