--- a/examples/package.json
+++ b/examples/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "lattice-engine": "workspace:^",
     "leva": "^0.9.35",
+    "postprocessing": "^6.32.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "three": "~0.153.0",
