--- a/packages/lattice-engine/package.json
+++ b/packages/lattice-engine/package.json
@@ -105,6 +105,7 @@
     "@lattice-engine/vrm": "workspace:^"
   },
   "devDependencies": {
+    "rollup-plugin-peer-deps-external": "^2.2.4",
     "typescript": "~5.1.6",
     "vite": "^4.3.9",
     "vite-plugin-dts": "^3.0.2"
