--- a/packages/scene/package.json
+++ b/packages/scene/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "@thyseus/transformer-rollup": "^0.13.0",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
     "typescript": "~5.1.6",
     "vite": "^4.3.9",
     "vite-plugin-dts": "^3.0.2"
