setup stencil based portal rendering

--- a/packages/portal/package.json
+++ b/packages/portal/package.json
@@ -31,6 +31,7 @@
     "@lattice-engine/player": "workspace:^",
     "@lattice-engine/render": "workspace:^",
     "@lattice-engine/scene": "workspace:^",
+    "postprocessing": "^6.32.2",
     "three": "~0.153.0",
     "thyseus": "^0.13.2"
   },
