--- a/packages/postprocessing/package.json
+++ b/packages/postprocessing/package.json
@@ -21,7 +21,7 @@
     "n8ao": "^1.6.8"
   },
   "devDependencies": {
-    "@thyseus/transformer-rollup": "^0.13.0",
+    "@thyseus/transformer-rollup": "0.14.0-beta.1",
     "@types/three": "~0.153.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "typescript": "~5.1.6",
@@ -34,7 +34,7 @@
     "@lattice-engine/scene": "workspace:^",
     "postprocessing": "^6.32.2",
     "three": "~0.153.0",
-    "thyseus": "^0.13.5"
+    "thyseus": "^0.14.0-beta.1"
   },
   "publishConfig": {
     "access": "public"
