--- a/packages/lattice-engine/package.json
+++ b/packages/lattice-engine/package.json
@@ -119,7 +119,7 @@
   "peerDependencies": {
     "postprocessing": "^6.32.2",
     "three": "~0.153.0",
-    "thyseus": "^0.13.5"
+    "thyseus": "^0.14.0-beta.1"
   },
   "publishConfig": {
     "access": "public"
