--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,6 +6,4 @@ updates:
     target-branch: "main"
     open-pull-requests-limit: 10
     schedule:
-      interval: "weekly"
-      day: "sunday"
-      time: "00:00"
+      interval: "monthly"
