--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,14 +25,24 @@
     "@typescript-eslint/no-unused-imports": "off",
     "@typescript-eslint/no-unused-vars": "off",
     "@typescript-eslint/no-var-requires": "off",
+    "@typescript-eslint/no-inferrable-types": "off",
     "simple-import-sort/exports": "warn",
     "simple-import-sort/imports": "warn",
-    "sort-keys-fix/sort-keys-fix": ["warn", "asc", { "natural": true }],
+    "sort-keys-fix/sort-keys-fix": [
+      "warn",
+      "asc",
+      {
+        "natural": true
+      }
+    ],
     "unused-imports/no-unused-imports": "error"
   },
   "settings": {
     "import/parsers": {
-      "@typescript-eslint/parser": [".ts", ".tsx"]
+      "@typescript-eslint/parser": [
+        ".ts",
+        ".tsx"
+      ]
     },
     "import/resolver": {
       "typescript": true
