--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -18,11 +18,10 @@
     "dev": "vite build --watch"
   },
   "devDependencies": {
-    "@thyseus/transformer-rollup": "0.14.0-beta.3",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "typescript": "~5.1.6",
     "vite": "^4.4.7",
-    "vite-plugin-dts": "^3.3.1"
+    "vite-plugin-thyseus-ts": "workspace:^"
   },
   "peerDependencies": {
     "thyseus": "^0.14.0-beta.3"
