--- a/packages/gltf/package.json
+++ b/packages/gltf/package.json
@@ -24,11 +24,10 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
-    "@thyseus/transformer-rollup": "0.14.0-beta.3",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "typescript": "~5.1.6",
     "vite": "^4.4.7",
-    "vite-plugin-dts": "^3.3.1"
+    "vite-plugin-thyseus-ts": "workspace:^"
   },
   "peerDependencies": {
     "@lattice-engine/core": "workspace:^",
