updgrade thyseus + fix dependency graph

--- a/packages/gltf/package.json
+++ b/packages/gltf/package.json
@@ -24,7 +24,12 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@lattice-engine/core": "workspace:^",
+    "@lattice-engine/physics": "workspace:^",
+    "@lattice-engine/scene": "workspace:^",
+    "@lattice-engine/text": "workspace:^",
     "rollup-plugin-peer-deps-external": "^2.2.4",
+    "thyseus": "^0.14.0-beta.5",
     "typescript": "~5.1.6",
     "vite": "^4.4.7",
     "vite-plugin-thyseus-ts": "workspace:^"
@@ -34,7 +39,7 @@
     "@lattice-engine/physics": "workspace:^",
     "@lattice-engine/scene": "workspace:^",
     "@lattice-engine/text": "workspace:^",
-    "thyseus": "^0.14.0-beta.3"
+    "thyseus": "*"
   },
   "publishConfig": {
     "access": "public"
