--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "license": "GPL-3.0-or-later",
   "scripts": {
-    "build": "turbo build",
-    "dev": "turbo dev --concurrency 19",
+    "build": "turbo build --filter=examples",
+    "dev": "turbo dev --concurrency 20",
     "format": "prettier --write .",
     "lint": "eslint --fix . --ext .ts,.tsx,.mjs,.json --ignore-path .prettierignore --ignore-pattern package.json",
     "release": "pnpm build && pnpm publish -r && changeset tag && git push --follow-tags",
