--- a/packages/render/package.json
+++ b/packages/render/package.json
@@ -18,8 +18,13 @@
     "dev": "vite build --watch"
   },
   "devDependencies": {
+    "@lattice-engine/core": "workspace:^",
+    "@lattice-engine/scene": "workspace:^",
     "@types/three": "~0.153.0",
+    "postprocessing": "^6.32.2",
     "rollup-plugin-peer-deps-external": "^2.2.4",
+    "three": "~0.153.0",
+    "thyseus": "^0.14.0-beta.5",
     "typescript": "~5.1.6",
     "vite": "^4.4.7",
     "vite-plugin-thyseus-ts": "workspace:^"
@@ -27,9 +32,9 @@
   "peerDependencies": {
     "@lattice-engine/core": "workspace:^",
     "@lattice-engine/scene": "workspace:^",
-    "postprocessing": "^6.32.2",
-    "three": "~0.153.0",
-    "thyseus": "^0.14.0-beta.3"
+    "postprocessing": "*",
+    "three": "*",
+    "thyseus": "*"
   },
   "publishConfig": {
     "access": "public"
