--- a/packages/transform/package.json
+++ b/packages/transform/package.json
@@ -18,8 +18,18 @@
     "dev": "vite build --watch"
   },
   "devDependencies": {
+    "@lattice-engine/core": "workspace:^",
+    "@lattice-engine/input": "workspace:^",
+    "@lattice-engine/orbit": "workspace:^",
+    "@lattice-engine/physics": "workspace:^",
+    "@lattice-engine/player": "workspace:^",
+    "@lattice-engine/postprocessing": "workspace:^",
+    "@lattice-engine/render": "workspace:^",
+    "@lattice-engine/scene": "workspace:^",
     "@types/three": "~0.153.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
+    "three": "~0.153.0",
+    "thyseus": "^0.14.0-beta.5",
     "typescript": "~5.1.6",
     "vite": "^4.4.7",
     "vite-plugin-thyseus-ts": "workspace:^"
@@ -33,8 +43,8 @@
     "@lattice-engine/postprocessing": "workspace:^",
     "@lattice-engine/render": "workspace:^",
     "@lattice-engine/scene": "workspace:^",
-    "three": "~0.153.0",
-    "thyseus": "^0.14.0-beta.3"
+    "three": "*",
+    "thyseus": "*"
   },
   "publishConfig": {
     "access": "public"
