--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -18,7 +18,12 @@
     "dev": "vite build --watch"
   },
   "devDependencies": {
+    "@lattice-engine/core": "workspace:^",
+    "@lattice-engine/input": "workspace:^",
+    "@lattice-engine/render": "workspace:^",
+    "@lattice-engine/scene": "workspace:^",
     "rollup-plugin-peer-deps-external": "^2.2.4",
+    "thyseus": "^0.14.0-beta.5",
     "typescript": "~5.1.6",
     "vite": "^4.4.7",
     "vite-plugin-thyseus-ts": "workspace:^"
@@ -28,7 +33,7 @@
     "@lattice-engine/input": "workspace:^",
     "@lattice-engine/render": "workspace:^",
     "@lattice-engine/scene": "workspace:^",
-    "thyseus": "^0.14.0-beta.3"
+    "thyseus": "*"
   },
   "publishConfig": {
     "access": "public"
