--- a/packages/lattice-engine/package.json
+++ b/packages/lattice-engine/package.json
@@ -90,7 +90,7 @@
     "vrm.d.ts"
   ],
   "scripts": {
-    "build": "vite build --emptyOutDir",
+    "build": "tsc --noEmit && vite build --emptyOutDir",
     "dev": "vite build --watch"
   },
   "dependencies": {
