--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -20,12 +20,13 @@
   "devDependencies": {
     "@thyseus/transformer-rollup": "^0.13.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
+    "thyseus": "^0.13.5",
     "typescript": "~5.1.6",
     "vite": "^4.4.7",
     "vite-plugin-dts": "^3.3.1"
   },
   "peerDependencies": {
-    "thyseus": "^0.13.5"
+    "thyseus": "*"
   },
   "publishConfig": {
     "access": "public"
