--- a/packages/gltf/package.json
+++ b/packages/gltf/package.json
@@ -24,8 +24,13 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@lattice-engine/core": "workspace:^",
+    "@lattice-engine/physics": "workspace:^",
+    "@lattice-engine/scene": "workspace:^",
+    "@lattice-engine/text": "workspace:^",
     "@thyseus/transformer-rollup": "^0.13.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
+    "thyseus": "^0.13.5",
     "typescript": "~5.1.6",
     "vite": "^4.4.7",
     "vite-plugin-dts": "^3.3.1"
@@ -35,7 +40,7 @@
     "@lattice-engine/physics": "workspace:^",
     "@lattice-engine/scene": "workspace:^",
     "@lattice-engine/text": "workspace:^",
-    "thyseus": "^0.13.5"
+    "thyseus": "*"
   },
   "publishConfig": {
     "access": "public"
