--- a/packages/orbit/package.json
+++ b/packages/orbit/package.json
@@ -18,9 +18,14 @@
     "dev": "vite build --watch"
   },
   "devDependencies": {
+    "@lattice-engine/input": "workspace:^",
+    "@lattice-engine/render": "workspace:^",
+    "@lattice-engine/scene": "workspace:^",
     "@thyseus/transformer-rollup": "^0.13.0",
     "@types/three": "~0.153.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
+    "three": "~0.153.0",
+    "thyseus": "^0.13.5",
     "typescript": "~5.1.6",
     "vite": "^4.4.7",
     "vite-plugin-dts": "^3.3.1"
@@ -29,8 +34,8 @@
     "@lattice-engine/input": "workspace:^",
     "@lattice-engine/render": "workspace:^",
     "@lattice-engine/scene": "workspace:^",
-    "three": "~0.153.0",
-    "thyseus": "^0.13.5"
+    "three": "*",
+    "thyseus": "*"
   },
   "publishConfig": {
     "access": "public"
