--- a/packages/postprocessing/package.json
+++ b/packages/postprocessing/package.json
@@ -26,15 +26,21 @@
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "typescript": "~5.1.6",
     "vite": "^4.4.7",
-    "vite-plugin-dts": "^3.3.1"
-  },
-  "peerDependencies": {
+    "vite-plugin-dts": "^3.3.1",
     "@lattice-engine/core": "workspace:^",
     "@lattice-engine/render": "workspace:^",
     "@lattice-engine/scene": "workspace:^",
     "postprocessing": "^6.32.2",
     "three": "~0.153.0",
     "thyseus": "^0.13.5"
+  },
+  "peerDependencies": {
+    "@lattice-engine/core": "workspace:^",
+    "@lattice-engine/render": "workspace:^",
+    "@lattice-engine/scene": "workspace:^",
+    "postprocessing": "*",
+    "three": "*",
+    "thyseus": "*"
   },
   "publishConfig": {
     "access": "public"
