--- a/packages/render/package.json
+++ b/packages/render/package.json
@@ -18,9 +18,14 @@
     "dev": "vite build --watch"
   },
   "devDependencies": {
+    "@lattice-engine/core": "workspace:^",
+    "@lattice-engine/scene": "workspace:^",
     "@thyseus/transformer-rollup": "^0.13.0",
     "@types/three": "~0.153.0",
+    "postprocessing": "^6.32.2",
     "rollup-plugin-peer-deps-external": "^2.2.4",
+    "three": "~0.153.0",
+    "thyseus": "^0.13.5",
     "typescript": "~5.1.6",
     "vite": "^4.4.7",
     "vite-plugin-dts": "^3.3.1"
@@ -28,9 +33,9 @@
   "peerDependencies": {
     "@lattice-engine/core": "workspace:^",
     "@lattice-engine/scene": "workspace:^",
-    "postprocessing": "^6.32.2",
-    "three": "~0.153.0",
-    "thyseus": "^0.13.5"
+    "postprocessing": "*",
+    "three": "*",
+    "thyseus": "*"
   },
   "publishConfig": {
     "access": "public"
