--- a/packages/text/package.json
+++ b/packages/text/package.json
@@ -21,9 +21,14 @@
     "troika-three-text": "^0.47.2"
   },
   "devDependencies": {
+    "@lattice-engine/core": "workspace:^",
+    "@lattice-engine/render": "workspace:^",
+    "@lattice-engine/scene": "workspace:^",
     "@thyseus/transformer-rollup": "^0.13.0",
     "@types/three": "~0.153.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
+    "three": "~0.153.0",
+    "thyseus": "^0.13.5",
     "typescript": "~5.1.6",
     "vite": "^4.4.7",
     "vite-plugin-dts": "^3.3.1"
@@ -32,8 +37,8 @@
     "@lattice-engine/core": "workspace:^",
     "@lattice-engine/render": "workspace:^",
     "@lattice-engine/scene": "workspace:^",
-    "three": "~0.153.0",
-    "thyseus": "^0.13.5"
+    "three": "*",
+    "thyseus": "*"
   },
   "publishConfig": {
     "access": "public"
