--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -18,8 +18,13 @@
     "dev": "vite build --watch"
   },
   "devDependencies": {
+    "@lattice-engine/core": "workspace:^",
+    "@lattice-engine/input": "workspace:^",
+    "@lattice-engine/render": "workspace:^",
+    "@lattice-engine/scene": "workspace:^",
     "@thyseus/transformer-rollup": "^0.13.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
+    "thyseus": "^0.13.5",
     "typescript": "~5.1.6",
     "vite": "^4.4.7",
     "vite-plugin-dts": "^3.3.1"
@@ -29,7 +34,7 @@
     "@lattice-engine/input": "workspace:^",
     "@lattice-engine/render": "workspace:^",
     "@lattice-engine/scene": "workspace:^",
-    "thyseus": "^0.13.5"
+    "thyseus": "*"
   },
   "publishConfig": {
     "access": "public"
