--- a/packages/gltf/package.json
+++ b/packages/gltf/package.json
@@ -29,7 +29,7 @@
     "@lattice-engine/scene": "workspace:^",
     "@lattice-engine/text": "workspace:^",
     "rollup-plugin-peer-deps-external": "^2.2.4",
-    "thyseus": "^0.14.0-beta.5",
+    "thyseus": "0.14.0-beta.8",
     "typescript": "~5.1.6",
     "vite": "^4.4.7",
     "vite-plugin-thyseus-ts": "workspace:^"
