--- a/packages/physics/package.json
+++ b/packages/physics/package.json
@@ -25,7 +25,7 @@
     "@lattice-engine/core": "workspace:^",
     "@lattice-engine/scene": "workspace:^",
     "rollup-plugin-peer-deps-external": "^2.2.4",
-    "thyseus": "^0.14.0-beta.5",
+    "thyseus": "0.14.0-beta.8",
     "typescript": "~5.1.6",
     "vite": "^4.4.7",
     "vite-plugin-thyseus-ts": "workspace:^",
