--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -7,5 +7,5 @@
   "access": "restricted",
   "baseBranch": "main",
   "updateInternalDependencies": "minor",
-  "ignore": ["examples"]
+  "ignore": ["examples", "scripts"]
 }
