--- a/packages/input/package.json
+++ b/packages/input/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com/lattice-engine/lattice",
+    "url": "https://github.com/unavi-xyz/lattice",
     "directory": "packages/input"
   },
   "license": "GPL-3.0-or-later",
@@ -20,7 +20,7 @@
   "devDependencies": {
     "@lattice-engine/core": "workspace:^",
     "rollup-plugin-peer-deps-external": "^2.2.4",
-    "thyseus": "0.14.0-beta.9",
+    "thyseus": "0.14.0",
     "typescript": "~5.2.2",
     "vite": "^4.4.7",
     "vite-plugin-thyseus-ts": "workspace:^"
