--- a/packages/lattice-engine/package.json
+++ b/packages/lattice-engine/package.json
@@ -17,7 +17,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/lattice-engine/lattice",
+    "url": "https://github.com/unavi-xyz/lattice",
     "directory": "packages/lattice-engine"
   },
   "license": "GPL-3.0-or-later",
@@ -113,16 +113,16 @@
   "devDependencies": {
     "postprocessing": "^6.32.2",
     "rollup-plugin-peer-deps-external": "^2.2.4",
-    "three": "~0.153.0",
-    "thyseus": "^0.14.0-beta.9",
+    "three": "~0.154.0",
+    "thyseus": "^0.14.0",
     "typescript": "~5.2.2",
     "vite": "^4.4.7",
     "vite-plugin-dts": "^3.3.1"
   },
   "peerDependencies": {
-    "postprocessing": "*",
-    "three": "*",
-    "thyseus": "*"
+    "postprocessing": "^6.32.2",
+    "three": "~0.154.0",
+    "thyseus": "^0.14.0"
   },
   "publishConfig": {
     "access": "public"
