--- a/packages/vite-plugin-thyseus-ts/package.json
+++ b/packages/vite-plugin-thyseus-ts/package.json
@@ -11,8 +11,8 @@
     "dev": "tsc -w"
   },
   "devDependencies": {
-    "@thyseus/transformer-rollup": "0.14.0-beta.8",
-    "thyseus": "0.14.0-beta.9",
+    "@thyseus/rollup-plugin-thyseus": "^0.14.0",
+    "thyseus": "^0.14.0",
     "typescript": "~5.2.2",
     "vite": "^4.4.7",
     "vite-plugin-dts": "^3.3.1"
