--- a/packages/vrm/package.json
+++ b/packages/vrm/package.json
@@ -3,7 +3,7 @@
   "version": "5.0.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com/lattice-engine/lattice",
+    "url": "https://github.com/unavi-xyz/lattice",
     "directory": "packages/vrm"
   },
   "license": "GPL-3.0-or-later",
@@ -18,16 +18,16 @@
     "dev": "vite build --watch"
   },
   "dependencies": {
-    "@pixiv/three-vrm": "^2.0.1"
+    "@pixiv/three-vrm": "^2.0.3"
   },
   "devDependencies": {
     "@lattice-engine/core": "workspace:^",
     "@lattice-engine/render": "workspace:^",
     "@lattice-engine/scene": "workspace:^",
-    "@types/three": "~0.153.0",
+    "@types/three": "~0.154.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
-    "three": "~0.153.0",
-    "thyseus": "0.14.0-beta.9",
+    "three": "~0.154.0",
+    "thyseus": "0.14.0",
     "typescript": "~5.2.2",
     "vite": "^4.4.7",
     "vite-plugin-thyseus-ts": "workspace:^"
